[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.12",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.9",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.8",
    "lxml>=6.0.2",
    "wikipedia>=1.4.0",
    "yfinance>=1.1.0",
    "youtube-search>=2.2.0",
    "youtube-search-python>=1.6.6",
]

[tool.uv.workspace]
members = [
    "gitignore",
]
